--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </p>
     </header>
 
-    <script src="./js/16.js"></script>
+    <!-- <script src="./js/16.js"></script> -->
+    <script src="./js/17.js"></script>
 </body>
 </html>
